@@ -468,6 +468,7 @@
 #define IDC_LUACONSOLE_CLEAR            1254
 #define IDC_LUACONSOLE_CHOOSEFONT       1255
 #define IDC_EDIT_LUAARGS                1256
+#define CB_PARTIALVISUALTHEME           1257
 #define MENU_NETWORK                    40040
 #define MENU_PALETTE                    40041
 #define MENU_SOUND                      40042
