@@ -1,3 +1,4 @@
+23-april-2010 - ugetab - Win32 - Added Tools>GUI option to partially disable visual themes, so the emulator can be made to look like it did in 2.1.1 and earlier releases.
 20-april-2010 - adelikat - New lua functions movie.ispoweron() and movie.isfromsavestate()
 20-april-2010 - adelikat - Win32 - Drag & Drop - if dropping a .fcm with no ROM loaded, prompt for one (same functionality that was added to .fm2 files)
 08-april-2010 - ugetab - Win32 - Added conditional debugging option 'K', for bank PC is on
